--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li class="header-nav-item"></li>
                 <li class="header-nav-item"></li>
                 <li class="header-nav-item"></li>
+                <div></div>
             </ul>
             <div class="logo-wrapper"></div>
             <div class="icon-wrapper">
