--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li class="header-nav-item"></li>
                 <li class="header-nav-item"></li>
                 <div></div>
+                <div class="div"></div>
             </ul>
             <div class="logo-wrapper"></div>
             <div class="icon-wrapper">
