--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hero">
-        <div class="hero-header">
-            <div class="menu-btn"></div>
-            <ul class="header-nav">
-                <li class="header-nav-item"></li>
-                <li class="header-nav-item"></li>
-                <li class="header-nav-item"></li>
-            </ul>
-            <div class="logo-wrapper"></div>
-            <div class="icon-wrapper">
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="icon"></div>
-            </div>
-        </div>
+    <header class="main-header">
+        <div class="menu-btn"></div>
+        <ul class="header-nav">
+            <li class="header-nav-item"></li>
+            <li class="header-nav-item"></li>
+            <li class="header-nav-item"></li>
+        </ul>
+        <div class="logo-wrapper"></div>
+        <ul class="icon-wrapper">
+            <li class="icon"></li>
+            <li class="icon"></li>
+            <li class="icon"></li>
+        </ul>
+    </header>
+    <div class="hero"></div>
         <div class="hero-img"></div>
         <div class="hero-content"></div>
     </div>
-    <div class="categories-container">
+    <section class="categories-container">
         <div class="categories-heading"></div>
         <div class="categories-item"></div>
         <div class="categories-item"></div>
         <div class="categories-item"></div>
-    </div>
+    </section>
     <div class="hero">
         <div class="hero-img"></div>
         <div class="hero-content"></div>
     </div>
-    <div class="card-container">
+    <section class="card-container">
         <div class="card"></div>
         <div class="card"></div>
-    </div>
+    </section>
     <div class="hero hero-background">
         <div class="hero-content"></div>
     </div>
-    <div class="categories-card-container">
+    <section class="categories-card-container">
         <a class="category-card" href=""></a>
         <a class="category-card" href=""></a>
         <a class="category-card" href=""></a>
         <a class="category-card" href=""></a>
         <a class="category-card" href=""></a>
         <a class="category-card" href=""></a>
-    </div>
-    <div class="footer-main">
+    </section>
+    <footer class="footer-main">
         <div class="footer-communications"></div>
         <nav class="footer-nav"></nav>
         <div class="footer-description">
@@ -63,9 +63,7 @@
             <div class="footer-switches"></div>
             <nav class="footer-legal"></nav>
         </div>
-    </div>
-
-
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
