--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="menu-btn"></div>
+        <div class="overhead-bar"></div>
+        <div class="menu-btn">
+            <span class="btn-burger-topl"></span>
+            <span class="btn-burger-topr"></span>
+            <span class="btn-burger-btml"></span>
+            <span class="btn-burger-btmr"></span>
+        </div>
         <ul class="header-nav">
-            <li class="header-nav-item"></li>
-            <li class="header-nav-item"></li>
-            <li class="header-nav-item"></li>
+            <li class="header-nav-item"><p class="nav-text">Clothing</p></li>
+            <li class="header-nav-item"><p class="nav-text">Footwear</p></li>
+            <li class="header-nav-item"><p class="nav-text">Equipment</p></li>
         </ul>
         <div class="logo-wrapper"></div>
         <ul class="icon-wrapper">
             <li class="icon"></li>
-            <li class="icon"></li>
+            <li class="icon">
+                <div class="loop">
+                    <div class="loop-curcle"></div>
+                    <span class="loop-handle"></span>
+                </div>
+            </li>
             <li class="icon"></li>
         </ul>
     </header>
