--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li class="icon"></li>
         </ul>
     </header>
-    <div class="hero"></div>
-        <div class="hero-img"></div>
-        <div class="hero-content"></div>
+    <div class="hero">
+        <section class="hero-img-up"></section>
+        <section class="hero-content-up"></section>
     </div>
     <section class="categories-container">
         <div class="categories-heading"></div>
@@ -44,15 +44,16 @@
         <div class="categories-item"></div>
     </section>
     <div class="hero">
-        <div class="hero-img"></div>
-        <div class="hero-content"></div>
+        <section class="hero-img-mid"></section>
+        <section class="hero-content-mid"></section>
     </div>
     <section class="card-container">
         <div class="card"></div>
         <div class="card"></div>
     </section>
-    <div class="hero hero-background">
-        <div class="hero-content"></div>
+    <div class="hero">
+        <section class="hero-img-dwn"></section>
+        <section class="hero-content-dwn"></section>
     </div>
     <section class="categories-card-container">
         <a class="category-card" href=""></a>
