--- a/index.html
+++ b/index.html
@@ -9,22 +9,33 @@
 </head>
 <body>
     <header class="main-header">
-        <div class="menu-btn"></div>
+        <div class="overhead-bar"></div>
+        <div class="menu-btn">
+            <span class="btn-burger-topl"></span>
+            <span class="btn-burger-topr"></span>
+            <span class="btn-burger-btml"></span>
+            <span class="btn-burger-btmr"></span>
+        </div>
         <ul class="header-nav">
-            <li class="header-nav-item"></li>
-            <li class="header-nav-item"></li>
-            <li class="header-nav-item"></li>
+            <li class="header-nav-item"><p class="nav-text">Clothing</p></li>
+            <li class="header-nav-item"><p class="nav-text">Footwear</p></li>
+            <li class="header-nav-item"><p class="nav-text">Equipment</p></li>
         </ul>
         <div class="logo-wrapper"></div>
         <ul class="icon-wrapper">
             <li class="icon"></li>
-            <li class="icon"></li>
+            <li class="icon">
+                <div class="loop">
+                    <div class="loop-curcle"></div>
+                    <span class="loop-handle"></span>
+                </div>
+            </li>
             <li class="icon"></li>
         </ul>
     </header>
-    <div class="hero"></div>
-        <div class="hero-img"></div>
-        <div class="hero-content"></div>
+    <div class="hero">
+        <section class="hero-img-up"></section>
+        <section class="hero-content-up"></section>
     </div>
     <section class="categories-container">
         <div class="categories-heading"></div>
@@ -33,15 +44,16 @@
         <div class="categories-item"></div>
     </section>
     <div class="hero">
-        <div class="hero-img"></div>
-        <div class="hero-content"></div>
+        <section class="hero-img-mid"></section>
+        <section class="hero-content-mid"></section>
     </div>
     <section class="card-container">
         <div class="card"></div>
         <div class="card"></div>
     </section>
-    <div class="hero hero-background">
-        <div class="hero-content"></div>
+    <div class="hero">
+        <section class="hero-img-dwn"></section>
+        <section class="hero-content-dwn"></section>
     </div>
     <section class="categories-card-container">
         <a class="category-card" href=""></a>
