--- a/index.html
+++ b/index.html
@@ -64,8 +64,56 @@
         <a class="category-card" href=""></a>
     </section>
     <footer class="footer-main">
-        <div class="footer-communications"></div>
-        <nav class="footer-nav"></nav>
+     <section class="footer-communications">
+        <div class="communications-container">
+            <div class="communications-icon-wrapper"><div class="communications-icon"><img src="/Mammut/slike-mammut/chat.png" alt="" class="icon"></div></div>
+            <div class="communications-content">
+                <p class="content-title">Chat</p>
+                <p class="content-text">Mon–Fri: 9am–6pm CET</p>
+            </div>
+        </div>
+        <div class="communications-container">
+            <div class="communications-icon-wrapper"><div class="communications-icon"><img src="/Mammut/slike-mammut/email.png" alt="" class="icon"></div></div>
+            <div class="communications-content">
+                <p class="content-title">Email</p>
+                <p class="content-text">We usually reply within 48 hours</p>
+            </div>
+        </div>
+        <div class="communications-container">
+            <div class="communications-icon-wrapper"><div class="communications-icon"><img src="/Mammut/slike-mammut/telephone.png" alt="" class="icon"></div></div>
+            <div class="communications-content">
+                <p class="content-title">Call us</p>
+                <p class="content-text">Mon-Fri: 9am-6pm CET</p>
+            </div>
+        </div>
+        <div class="communications-container">
+            <div class="communications-icon-wrapper"><div class="communications-icon"><img src="/Mammut/slike-mammut/star.png" alt="" class="icon"></div></div>
+            <div class="communications-content">
+                <p class="content-title">Feedback</p>
+                <p class="content-text">Always a good idea</p>
+            </div>
+        </div>
+     </section>
+        <nav class="footer-nav">
+            <div class="footer-nav-item">
+                <div class="arrow-container">
+                    <span class="arrow-line right"></span>
+                </div>
+                <p class="nav-content">Support</p>
+            </div>
+            <div class="footer-nav-item">
+                <div class="arrow-container"></div>
+                <p class="nav-content">Wish List</p>
+            </div>
+            <div class="footer-nav-item">
+                <div class="arrow-container"></div>
+                <p class="nav-content">Mammut Alpine School</p>
+            </div>
+            <div class="footer-nav-item">
+                <div class="arrow-container"></div>
+                <p class="nav-content">Newsletter</p>
+            </div>
+        </nav>
         <div class="footer-description">
             <p class="footer-company-description"></p>
             <nav class="footer-sub-nav"></nav>
