--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <li class="icon"></li>
             <li class="icon">
                 <div class="loop">
-                    
+                    <div class="loop-curcle"></div>
+                    <span class="loop-handle"></span>
                 </div>
             </li>
             <li class="icon"></li>
@@ -44,7 +45,10 @@
         </section>
     </div>
     <section class="categories-container">
-        <div class="categories-heading"></div>
+        <div class="categories-heading">
+            <p class="categories-text">What do you need for the next adventure?</p>
+            <div class="dot"></div>
+        </div>
         <div class="categories-item"></div>
         <div class="categories-item"></div>
         <div class="categories-item"></div>
@@ -74,7 +78,7 @@
         <div class="communications-container">
             <div class="communications-icon-wrapper">
                 <div class="communications-icon">
-                    <img src="/Mammut/slike-mammut/chat.png" alt="" class="icon">
+                    <img src="/Mammut/slike-mammut/chat.png" alt="" class="footer-icon">
                 </div>
             </div>
             <div class="communications-content">
@@ -85,7 +89,7 @@
         <div class="communications-container">
             <div class="communications-icon-wrapper">
                 <div class="communications-icon">
-                    <img src="/Mammut/slike-mammut/email.png" alt="" class="icon">
+                    <img src="/Mammut/slike-mammut/email.png" alt="" class="footer-icon">
                 </div>
             </div>
             <div class="communications-content">
@@ -96,7 +100,7 @@
         <div class="communications-container">
             <div class="communications-icon-wrapper">
                 <div class="communications-icon">
-                    <img src="/Mammut/slike-mammut/telephone.png" alt="" class="icon">
+                    <img src="/Mammut/slike-mammut/telephone.png" alt="" class="footer-icon">
                 </div>
             </div>
             <div class="communications-content">
@@ -107,7 +111,7 @@
         <div class="communications-container">
             <div class="communications-icon-wrapper">
                 <div class="communications-icon">
-                    <img src="/Mammut/slike-mammut/star.png" alt="" class="icon">
+                    <img src="/Mammut/slike-mammut/star.png" alt="" class="footer-icon">
                 </div>
             </div>
             <div class="communications-content">
