--- a/index.html
+++ b/index.html
@@ -39,8 +39,18 @@
             <div class="hero-text-wrapper">
                <p class="hero-title">New for fall</p>
                <p class="hero-text">Find that golden fall glow with highlights from our new collection.</p>
-               <span class="gender-link-container"></span>
-               <span class="gender-link-container"></span>
+               <span class="gender-link-container">
+                <div class="hero-arrow-container">
+                    <span class="hero-arrow-line"></span>
+                </div>
+                <p class="gender-text">Women</p>
+               </span>
+               <span class="gender-link-container">
+                <div class="hero-arrow-container">
+                    <span class="hero-arrow-line"></span>
+                </div>
+                <p class="gender-text">Men</p>
+               </span>
             </div>
         </section>
     </div>
@@ -49,9 +59,30 @@
             <p class="categories-text">What do you need for the next adventure?</p>
             <div class="dot"></div>
         </div>
-        <div class="categories-item"></div>
-        <div class="categories-item"></div>
-        <div class="categories-item"></div>
+            <div class="categories-item clothing">
+                <span class="categories-item-text-wrapper">
+                    <div class="categories-arrow-container">
+                        <span class="categories-arrow-line"></span>
+                    </div>
+                    <p class="categories-item-text">Clothing</p>
+                   </span>
+            </div>
+            <div class="categories-item footwear">
+                <span class="categories-item-text-wrapper">
+                    <div class="categories-arrow-container">
+                        <span class="categories-arrow-line"></span>
+                    </div>
+                    <p class="categories-item-text">Footwear</p>
+                   </span>
+            </div>
+            <div class="categories-item equipment">
+                <span class="categories-item-text-wrapper">
+                    <div class="categories-arrow-container">
+                        <span class="categories-arrow-line"></span>
+                    </div>
+                    <p class="categories-item-text">Equipment</p>
+                   </span>
+            </div>
     </section>
     <div class="hero">
         <section class="hero-img-mid"></section>
