--- a/index.html
+++ b/index.html
@@ -22,15 +22,28 @@
             <li class="header-nav-item"><p class="nav-text">Equipment</p></li>
         </ul>
         <div class="logo-wrapper"></div>
-        <ul class="icon-wrapper">
-            <li class="icon"></li>
-            <li class="icon">
-                <div class="loop">
-                    <div class="loop-curcle"></div>
+        <ul class="header-icon-wrapper">
+            <li class="header-icon">
+                <div class="basket-icon">
+                    <span class="basket-handle"></span>
+                    <span class="basket-top"></span>
+                    <span class="basket-sidel"></span>
+                    <span class="basket-sider"></span>
+                    <span class="basket-bottom"></span>
+                </div>
+            </li>
+            <li class="header-icon">
+                <div class="loop-icon">
+                    <span class="loop-curcle"></span>
                     <span class="loop-handle"></span>
                 </div>
             </li>
-            <li class="icon"></li>
+            <li class="header-icon">
+                <div class="login-icon">
+                    <span class="login-head"></span>
+                    <span class="login-body"></span>
+                </div>
+            </li>
         </ul>
     </header>
     <div class="hero">
@@ -86,11 +99,27 @@
     </section>
     <div class="hero">
         <section class="hero-img-mid"></section>
-        <section class="hero-content-mid"></section>
+        <section class="hero-content-mid">
+            <div class="hero-text-wrapper">
+                <p class="hero-title-mid">Celebrating 160 years</p>
+                <p class="hero-text-mid">From humble beginnings in 1862, Mammut has come a long way. A lot can happen in 160 years, but some things never change.</p>
+                <span class="discovery-link-container">
+                <div class="hero-mid-arrow-container">
+                    <span class="hero-mid-arrow-line"></span>
+                </div>
+                <p class="discovery-text">Discover Our Story</p>
+               </span>
+            </div>
+        </section>
     </div>
     <section class="card-container">
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class=" card cardl">
+            <div class="card-men">
+            </div>
+        </div>
+        <div class="card cardr">
+            <div class="card-women"></div>
+        </div>
     </section>
     <div class="hero">
         <section class="hero-img-dwn"></section>
@@ -113,8 +142,8 @@
                 </div>
             </div>
             <div class="communications-content">
-                <p class="content-title">Chat</p>
-                <p class="content-text">Mon–Fri: 9am–6pm CET</p>
+                <p class="communications-content-title">Chat</p>
+                <p class="communications-content-text">Mon–Fri: 9am–6pm CET</p>
             </div>
         </div>
         <div class="communications-container">
@@ -124,8 +153,8 @@
                 </div>
             </div>
             <div class="communications-content">
-                <p class="content-title">Email</p>
-                <p class="content-text">We usually reply within 48 hours</p>
+                <p class="communications-content-title">Email</p>
+                <p class="communications-content-text">We usually reply within 48 hours</p>
             </div>
         </div>
         <div class="communications-container">
@@ -135,8 +164,8 @@
                 </div>
             </div>
             <div class="communications-content">
-                <p class="content-title">Call us</p>
-                <p class="content-text">Mon-Fri: 9am-6pm CET</p>
+                <p class="communications-content-title">Call us</p>
+                <p class="communications-content-text">Mon-Fri: 9am-6pm CET</p>
             </div>
         </div>
         <div class="communications-container">
@@ -146,13 +175,13 @@
                 </div>
             </div>
             <div class="communications-content">
-                <p class="content-title">Feedback</p>
-                <p class="content-text">Always a good idea</p>
+                <p class="communications-content-title">Feedback</p>
+                <p class="communications-content-text">Always a good idea</p>
             </div>
         </div>
      </section>
         <nav class="footer-nav">
-            <div class="footer-nav-item" id="navItem">
+            <div class="footer-nav-item">
                 <div class="arrow-container">
                     <span class="arrow-line"></span>
                 </div>
@@ -177,11 +206,30 @@
                 <p class="nav-content">Newsletter</p>
             </div>
         </nav>
-        <div class="footer-description">
-            <p class="footer-company-description"></p>
-            <nav class="footer-sub-nav"></nav>
-            <nav class="footer-sub-nav"></nav>
-        </div>
+        <section class="footer-description">
+            <section class="footer-company-description">
+                <p class="description-heading">About Mammut</p>
+                <p class="description-content">Mammut is a Swiss premium outdoor company founded in 1862 providing high quality products and unique brand experiences to mountain sport enthusiasts around the globe.</p>
+                <section class="location-switch-container">
+                    <div class="location-icon-wrapper">
+                        <img src="/Mammut/slike-mammut/placeholder.png" alt="" class="location-icon">
+                    </div>
+                    <p class="location-heading"> Country</p>
+                    <p class="location-switch-country">United States (EN)</p>
+                </section>
+            </section>
+            <section class="footer-sub-nav-wrapper">
+                <nav class="footer-sub-nav">
+                    <div class="footer-sub-nav-item">
+                        <div class="arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Support</p>
+                    </div>
+                </nav>
+                <nav class="footer-sub-nav"></nav>
+            </section>
+        </section>
         <div class="footer-lower">
             <div class="footer-switches"></div>
             <nav class="footer-legal"></nav>
