--- a/index.html
+++ b/index.html
@@ -220,11 +220,42 @@
             </section>
             <section class="footer-sub-nav-wrapper">
                 <nav class="footer-sub-nav">
+                    <h1 class="footer-sub-nav-heading">Follow</h1>
                     <div class="footer-sub-nav-item">
-                        <div class="arrow-container">
-                            <span class="arrow-line"></span>
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
                         </div>
-                        <p class="sub-nav-content">Support</p>
+                        <p class="sub-nav-content">Instagram</p>
+                    </div>
+                    <div class="footer-sub-nav-item">
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Facebook</p>
+                    </div>
+                    <div class="footer-sub-nav-item">
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Youtube</p>
+                    </div>
+                    <div class="footer-sub-nav-item">
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Strava</p>
+                    </div>
+                    <div class="footer-sub-nav-item">
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Pintrest</p>
+                    </div>
+                    <div class="footer-sub-nav-item">
+                        <div class="sub-nav-arrow-container">
+                            <span class="sub-nav-arrow-line"></span>
+                        </div>
+                        <p class="sub-nav-content">Linkedin</p>
                     </div>
                 </nav>
                 <nav class="footer-sub-nav"></nav>
