--- a/index.html
+++ b/index.html
@@ -8,7 +8,72 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="main-menu" id="mainMenu"></section>
+    <section class="menu-open-page-background" id="mainMenuBackgroundCover"></section>
+    <section class="main-menu" id="mainMenu">
+        <ul class="menu-main-nav">
+            <li class="menu-main-nav-item" id="menuClothing">
+                <p class="menu-main-nav-text">Clothing</p>
+
+                <div class="menu-main-nav-arrow-container">
+                    <span class="menu-main-nav-arrow-line"></span>
+                </div>            
+            </li>
+            <li class="menu-main-nav-item">
+                <p class="menu-main-nav-text">Footwear</p>
+                <div class="menu-main-nav-arrow-container">
+                    <span class="menu-main-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-main-nav-item">
+                <p class="menu-main-nav-text">Equipment</p>
+
+                <div class="menu-main-nav-arrow-container">
+                    <span class="menu-main-nav-arrow-line"></span>
+                </div>
+            </li>
+        </ul>
+        <ul class="menu-sub-nav">
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">Outlet</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">Support</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">Wish List</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">Journal</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">NewsLetter</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+            <li class="menu-sub-nav-item">
+                <p class="menu-sub-nav-text">Mammut Alpine School</p>
+                <div class="menu-sub-nav-arrow-container">
+                    <span class="menu-sub-nav-arrow-line"></span>
+                </div>
+            </li>
+        </ul>
+        <section class="main-menu-extention-one" id="extentionOne"></section>
+    </section>
+        
+
     <header class="main-header">
         <div class="overhead-bar"></div>
         <div class="menu-btn">
@@ -28,7 +93,9 @@
                 <p class="nav-text">Equipment</p>
             </li>
         </ul>
-        <div class="logo-wrapper"></div>
+        <div class="logo-wrapper">
+            <img src="/Mammut/slike-mammut/mammut-logo-white.png" alt="" class="logo">
+        </div>
         <ul class="header-icon-wrapper" id="headerIconNav">
             <li class="header-icon">
                 <div class="basket-icon">
@@ -132,12 +199,86 @@
         <section class="hero-content-dwn"></section>
     </div>
     <section class="categories-card-container">
-        <a class="category-card" href=""></a>
-        <a class="category-card" href=""></a>
-        <a class="category-card" href=""></a>
-        <a class="category-card" href=""></a>
-        <a class="category-card" href=""></a>
-        <a class="category-card" href=""></a>
+        <section class="category-card-wrapper">
+            <span class="category-card category-cardtl">
+                <p class="category-card-text">Eiger Extreme</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                        <img src="/Mammut/category-card-slike/eigerExtreme3.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                        <img src="/Mammut/category-card-slike/eigerExtreme2.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                        <img src="/Mammut/category-card-slike/eigerExtreme1.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+            <span class="category-card category-cardtm">
+                <p class="category-card-text">Ropes</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                        <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                        <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                        <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+            <span class="category-card category-cardtr">
+                <p class="category-card-text">Rain Jackets</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-rain-jacket">
+                        <img src="/Mammut/category-card-slike/rainJacket.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+            <span class="category-card category-cardbl">
+                <p class="category-card-text">Pants & Shorts</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                        <img src="/Mammut/category-card-slike/pants3.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                        <img src="/Mammut/category-card-slike/pants2.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                        <img src="/Mammut/category-card-slike/pants1.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+            <span class="category-card category-cardbm">
+                <p class="category-card-text">Sleeping Bags</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                        <img src="/Mammut/category-card-slike/sleepingbag3.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                        <img src="/Mammut/category-card-slike/sleepingbag2.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                        <img src="/Mammut/category-card-slike/sleepingbag1.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+            <span class="category-card category-cardbr">
+                <p class="category-card-text">Avalanche Safety</p>
+                <ul class="category-card-icon-wrapper">
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                        <img src="/Mammut/category-card-slike/safety3.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                        <img src="/Mammut/category-card-slike/safety2.png" alt="" class="category-card-icon">
+                    </li>
+                    <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                        <img src="/Mammut/category-card-slike/safety1.png" alt="" class="category-card-icon">
+                    </li>
+                </ul>
+            </span>
+        </section>
     </section>
     <footer class="footer-main">
      <section class="footer-communications">
