--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <span class="menu-main-nav-arrow-line"></span>
                 </div>            
             </li>
-            <li class="menu-main-nav-item">
+            <li class="menu-main-nav-item" id="menuFootwear">
                 <p class="menu-main-nav-text">Footwear</p>
                 <div class="menu-main-nav-arrow-container">
                     <span class="menu-main-nav-arrow-line"></span>
@@ -70,7 +70,100 @@
                 </div>
             </li>
         </ul>
-        <section class="main-menu-extention-one" id="extentionOne"></section>
+        <section class="main-menu-extention-clothing-one" id="extentionClothingOne">
+            <div class="clothing-nav">
+                <ul class="clothing-nav-content-wrapper">
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="shopByActivityClothing">Shop by activity</p>
+                    </li>
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="menClothing">Men</p>
+                    </li>
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="womenClothing">Women</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="main-menu-extention-clothing-two" id="extentionClothingTwo">
+            <ul class="extention-two-nav-wrapper-shop-by-activity" id="extentionTwoNavShopByActivity">
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text"></p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/category-card-slike/ropes3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/category-card-slike/ropes2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/category-card-slike/ropes1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
     </section>
         
 
@@ -126,18 +219,20 @@
             <div class="hero-text-wrapper">
                <p class="hero-title">New for fall</p>
                <p class="hero-text">Find that golden fall glow with highlights from our new collection.</p>
-               <span class="gender-link-container">
-                <div class="hero-arrow-container">
-                    <span class="hero-arrow-line"></span>
-                </div>
-                <p class="gender-text">Women</p>
-               </span>
-               <span class="gender-link-container">
-                <div class="hero-arrow-container">
-                    <span class="hero-arrow-line"></span>
-                </div>
-                <p class="gender-text">Men</p>
-               </span>
+               <div class="gender-container-wrapper" id="genderContainerWrapper">
+                <span class="gender-link-container">
+                    <div class="hero-arrow-container">
+                        <span class="hero-arrow-line"></span>
+                    </div>
+                    <p class="gender-text">Women</p>
+                   </span>
+                   <span class="gender-link-container">
+                    <div class="hero-arrow-container">
+                        <span class="hero-arrow-line"></span>
+                    </div>
+                    <p class="gender-text">Men</p>
+                   </span>
+               </div>
             </div>
         </section>
     </div>
